tests/NormalTests/paczka1/small_fuzzy/69675132.err
Error in line 3: 4yr3SkQg A239 51,8
Error in line 4: 4yr3SkQg S124 10,3
Error in line 10: F9cJbMtMD4 S461 10,9
